Closed Bug 99846 Opened 23 years ago Closed 23 years ago

Environment var for plugin path has the wrong name

Categories

(Core Graveyard :: Plug-ins, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: gerv, Assigned: serhunt)

Details

Attachments

(1 file)

You can now set an environment variable on Unix to tell Mozilla where to look
for plugins. This was bug 54291. This is great for testers who install a lot of
builds and want Flash and Realplayer.

The problem? The name of the variable is NS600_PLUGIN_PATH ! I mean,
NS_PLUGIN_PATH would have been bad enough, but tying it to a particular version!

This should be changed to MOZILLA_PLUGIN_PATH immediately. If you need to
version it, then MOZILLA0.9_PLUGIN_PATH would be fine.

I'm ccing the people who wrote, reviewed, super-reviewed and approved the
original checkin. This is a one-line fix, which I intend to make unless someone
can tell me why it's a bad idea. After all, if it's called NS600_PLUGIN_PATH
then it can only have been intended for NS 6.0, right? So changing it won't be a
problem.
http://lxr.mozilla.org/seamonkey/source/modules/plugin/base/src/nsPluginsDirUnix.cpp#48

Gerv
How did we miss that?  Blindness.  Please fix it -- I trust no one needs the old
envar to be checked too, for backward compatibility?  Or is there a public
compatibility issue now?

/be
OK, so we go with MOZ09_PLUGIN_PATH, in case the plugin interface changes
sufficiently for us to have to move it? Or do we eliminate version numbering
altogether?

Also currently this path has "plugins" appended to it. This seems to me to be a
pointless source of confusion; the environment var should point directly to the
plugin path, rather than getting munged. Does that make sense?

Gerv
Why would we want a version number in the envar name?

I agree with gerv that the envar's value should be used, verbatim, as the path
to the plugins directory.  No munging.  This is SOP on Unix and getenv-imitating
OSes.

/be
Attached patch Patch v.1Splinter Review
This is trivial. Any review will do. 5 seconds, tops. 

(The other constant I removed is unused in the file.)

Gerv
r=av
sr=me
Checked in.

Gerv
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
v(stamp)
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: