Plugins dir environment variable was misnamed. Renamed it to MOZ_PLUGIN_PATH. Bug 99846. r=av, sr=blake.